{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 2001,
  "lineage": "a7e57da0-e291-a211-29b8-3052f1c00f23",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_on_in_custom_vpc_az-a-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08410671221890f3e",
            "association_id": "eipassoc-0ca94aa8baef1ec42",
            "domain": "vpc",
            "id": "eipalloc-08410671221890f3e",
            "instance": "i-00c946a34b70ab53a",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0f2ac1f848b18d7bb",
            "private_dns": "ip-192-168-0-73.ap-southeast-1.compute.internal",
            "private_ip": "192.168.0.73",
            "public_dns": "ec2-18-142-77-181.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.142.77.181",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_ami_from_instance.ec2_with_httpd_installed_server_ami_asia",
            "aws_instance.ec2_with_httpd_installed_server_asia_1",
            "aws_instance.in_custom_vpc_az-a-public-1",
            "aws_internet_gateway.custom_vpc_igw",
            "aws_security_group.firewall_asia",
            "aws_security_group.firewall_asia_at_vpc_custom_vpc",
            "aws_subnet.az-a-public-1",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a45721dacb179ce8",
            "association_id": "eipassoc-0c8dfc46707af3982",
            "domain": "vpc",
            "id": "eipalloc-0a45721dacb179ce8",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-05f45af963924d045",
            "private_dns": "ip-192-168-0-89.ap-southeast-1.compute.internal",
            "private_ip": "192.168.0.89",
            "public_dns": "ec2-52-74-40-193.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.74.40.193",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_with_httpd_installed_server_asia_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0753e0e42b20e96e3",
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:instance/i-0082350158ede220a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0082350158ede220a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dimu-imac",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a7bf677a1dd1e18a",
            "private_dns": "ip-172-31-30-230.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.30.230",
            "public_dns": "ec2-18-138-251-145.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.138.251.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-092ba51cf909929b2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20230202192444576900000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-048d4eff34f13641c",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09d8531b4e51a5fce"
            ]
          },
          "dependencies": [
            "aws_security_group.firewall_asia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_with_httpd_installed_server_asia_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b84dab84a89a418a",
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:instance/i-0ea1613759fdef8c3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea1613759fdef8c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06f313150a9a5ca67",
            "private_dns": "ip-172-31-18-241.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.18.241",
            "public_dns": "ec2-18-136-207-175.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.136.207.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06da10422df037dd8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20230202192444576900000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-048d4eff34f13641c",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09d8531b4e51a5fce"
            ]
          },
          "dependencies": [
            "aws_ami_from_instance.ec2_with_httpd_installed_server_ami_asia",
            "aws_instance.ec2_with_httpd_installed_server_asia_1",
            "aws_security_group.firewall_asia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_with_httpd_installed_server_asia_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b84dab84a89a418a",
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:instance/i-07d04615893301082",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d04615893301082",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d90df408992da94b",
            "private_dns": "ip-172-31-38-116.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.38.116",
            "public_dns": "ec2-13-212-5-90.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.212.5.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c74a389d0716dca2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20230202192444576900000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-065e151961a7b9b19",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09d8531b4e51a5fce"
            ]
          },
          "dependencies": [
            "aws_ami_from_instance.ec2_with_httpd_installed_server_ami_asia",
            "aws_instance.ec2_with_httpd_installed_server_asia_1",
            "aws_security_group.firewall_asia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_with_httpd_installed_server_emea_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].emea",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-017143042b64cc680",
            "arn": "arn:aws:ec2:eu-west-1:460756703371:instance/i-0e47e72abb76ddc1a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e47e72abb76ddc1a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aaf21ceae4c6b3a1",
            "private_dns": "ip-172-31-47-90.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.47.90",
            "public_dns": "ec2-34-244-161-31.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.244.161.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0303ab7a35fdc516c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20230202192445636500000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e60ee6067b12753f",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0535ddc1222623bc7"
            ]
          },
          "dependencies": [
            "aws_ami_copy.ec2_with_httpd_installed_server_ami_emea",
            "aws_ami_from_instance.ec2_with_httpd_installed_server_ami_asia",
            "aws_instance.ec2_with_httpd_installed_server_asia_1",
            "aws_security_group.firewall_asia",
            "aws_security_group.firewall_emea"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "in_custom_vpc_az-a-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b84dab84a89a418a",
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:instance/i-0e00416be30ee61ec",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e00416be30ee61ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dimu-imac",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d9b02a61d31e2476",
            "private_dns": "ip-192-168-0-29.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06acfb39f920ca99c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e7adf0325ce9c7a",
            "tags": {
              "Name": "in_custom_vpc_az-a-private-1"
            },
            "tags_all": {
              "Name": "in_custom_vpc_az-a-private-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07f5b6783e1c9793d"
            ]
          },
          "dependencies": [
            "aws_ami_from_instance.ec2_with_httpd_installed_server_ami_asia",
            "aws_instance.ec2_with_httpd_installed_server_asia_1",
            "aws_security_group.firewall_asia",
            "aws_security_group.firewall_asia_at_vpc_custom_vpc",
            "aws_subnet.az-a-private-1",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "in_custom_vpc_az-a-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b84dab84a89a418a",
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:instance/i-00c946a34b70ab53a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c946a34b70ab53a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dimu-imac",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f2ac1f848b18d7bb",
            "private_dns": "ip-192-168-0-73.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dd3ba7102ee5c49c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-082a8a380283e8d2a",
            "tags": {
              "Name": "in_custom_vpc_az-a-public-1"
            },
            "tags_all": {
              "Name": "in_custom_vpc_az-a-public-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07f5b6783e1c9793d"
            ]
          },
          "dependencies": [
            "aws_ami_from_instance.ec2_with_httpd_installed_server_ami_asia",
            "aws_instance.ec2_with_httpd_installed_server_asia_1",
            "aws_internet_gateway.custom_vpc_igw",
            "aws_security_group.firewall_asia",
            "aws_security_group.firewall_asia_at_vpc_custom_vpc",
            "aws_subnet.az-a-public-1",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "in_custom_vpc_az-a-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b84dab84a89a418a",
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:instance/i-00214400bed2ca57f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00214400bed2ca57f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dimu-imac",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a392ffb7c918d18e",
            "private_dns": "ip-192-168-0-81.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ece6d8c0967ab9d9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-082a8a380283e8d2a",
            "tags": {
              "Name": "in_custom_vpc_az-a-public-2"
            },
            "tags_all": {
              "Name": "in_custom_vpc_az-a-public-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07f5b6783e1c9793d"
            ]
          },
          "dependencies": [
            "aws_ami_from_instance.ec2_with_httpd_installed_server_ami_asia",
            "aws_instance.ec2_with_httpd_installed_server_asia_1",
            "aws_internet_gateway.custom_vpc_igw",
            "aws_security_group.firewall_asia",
            "aws_security_group.firewall_asia_at_vpc_custom_vpc",
            "aws_subnet.az-a-public-1",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "custom_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:internet-gateway/igw-069e73ea536621fb5",
            "id": "igw-069e73ea536621fb5",
            "owner_id": "460756703371",
            "tags": {
              "Name": "custom_vpc_IGW"
            },
            "tags_all": {
              "Name": "custom_vpc_IGW"
            },
            "vpc_id": "vpc-012d9a50b5f283f79"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_on_AZ_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a45721dacb179ce8",
            "connectivity_type": "public",
            "id": "nat-041c49f81891a9cb9",
            "network_interface_id": "eni-05f45af963924d045",
            "private_ip": "192.168.0.89",
            "public_ip": "52.74.40.193",
            "subnet_id": "subnet-082a8a380283e8d2a",
            "tags": {
              "Name": "nat_gw_on_AZ_a"
            },
            "tags_all": {
              "Name": "nat_gw_on_AZ_a"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.az-a-public-1",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:network-acl/acl-0417c097f9a8f25c6",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-0417c097f9a8f25c6",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "owner_id": "460756703371",
            "subnet_ids": [],
            "tags": {
              "Name": "custom NACL"
            },
            "tags_all": {
              "Name": "custom NACL"
            },
            "vpc_id": "vpc-012d9a50b5f283f79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "aws_network_interface_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:network-interface/eni-0b15f2565ee2939d3",
            "id": "eni-0b15f2565ee2939d3",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:85:e7:07:90:a8",
            "owner_id": "460756703371",
            "private_ip": "192.168.0.69",
            "private_ip_list": [
              "192.168.0.69"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.0.69"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07f5b6783e1c9793d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-082a8a380283e8d2a"
          },
          "dependencies": [
            "aws_security_group.firewall_asia_at_vpc_custom_vpc",
            "aws_subnet.az-a-public-1",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "aws_network_interface_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:network-interface/eni-006e43168c0c142c0",
            "id": "eni-006e43168c0c142c0",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:df:49:c6:6a:00",
            "owner_id": "460756703371",
            "private_ip": "192.168.0.59",
            "private_ip_list": [
              "192.168.0.59"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.0.59"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-090b52a6265c43038"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e5852a4ce218e4f"
          },
          "dependencies": [
            "aws_subnet.az-a-private-2",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_routing_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:route-table/rtb-0ad3373f2b74992aa",
            "id": "rtb-0ad3373f2b74992aa",
            "owner_id": "460756703371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069e73ea536621fb5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_routing_table"
            },
            "tags_all": {
              "Name": "public_routing_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-012d9a50b5f283f79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.custom_vpc_igw",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routing_table_for_private_subnet_with_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:route-table/rtb-06280ba51af04ce21",
            "id": "rtb-06280ba51af04ce21",
            "owner_id": "460756703371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-041c49f81891a9cb9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private routing table"
            },
            "tags_all": {
              "Name": "private routing table"
            },
            "timeouts": null,
            "vpc_id": "vpc-012d9a50b5f283f79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw_on_AZ_a",
            "aws_subnet.az-a-public-1",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03268b3efaf3b4e9d",
            "route_table_id": "rtb-0ad3373f2b74992aa",
            "subnet_id": "subnet-082a8a380283e8d2a"
          },
          "dependencies": [
            "aws_internet_gateway.custom_vpc_igw",
            "aws_route_table.public_routing_table",
            "aws_subnet.az-a-public-1",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_with_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c863e472bd9fdb0",
            "route_table_id": "rtb-06280ba51af04ce21",
            "subnet_id": "subnet-07e7adf0325ce9c7a"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw_on_AZ_a",
            "aws_route_table.routing_table_for_private_subnet_with_nat",
            "aws_subnet.az-a-private-1",
            "aws_subnet.az-a-public-1",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "firewall_asia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:security-group/sg-09d8531b4e51a5fce",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d8531b4e51a5fce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20230202192444576900000001",
            "name_prefix": "terraform-",
            "owner_id": "460756703371",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e228481ffec485f3"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "firewall_asia_at_vpc_custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:security-group/sg-07f5b6783e1c9793d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f5b6783e1c9793d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20230212053918805900000001",
            "name_prefix": "terraform-",
            "owner_id": "460756703371",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-012d9a50b5f283f79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "firewall_emea",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].emea",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:460756703371:security-group/sg-0535ddc1222623bc7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0535ddc1222623bc7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20230202192445636500000001",
            "name_prefix": "terraform-",
            "owner_id": "460756703371",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0017170a593df7c9b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az-a-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:subnet/subnet-07e7adf0325ce9c7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.0.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e7adf0325ce9c7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "460756703371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AZ-A-private-1"
            },
            "tags_all": {
              "Name": "AZ-A-private-1"
            },
            "vpc_id": "vpc-012d9a50b5f283f79"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az-a-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:subnet/subnet-05e5852a4ce218e4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.0.32/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e5852a4ce218e4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "460756703371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AZ-A-private-2"
            },
            "tags_all": {
              "Name": "AZ-A-private-2"
            },
            "vpc_id": "vpc-012d9a50b5f283f79"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az-a-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:subnet/subnet-082a8a380283e8d2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.0.64/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082a8a380283e8d2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "460756703371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AZ-A-public-1"
            },
            "tags_all": {
              "Name": "AZ-A-public-1"
            },
            "vpc_id": "vpc-012d9a50b5f283f79"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az-b-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:subnet/subnet-03d613dc8caa8e6a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.0.96/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d613dc8caa8e6a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "460756703371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AZ-B-private-1"
            },
            "tags_all": {
              "Name": "AZ-B-private-1"
            },
            "vpc_id": "vpc-012d9a50b5f283f79"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az-b-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:subnet/subnet-0a90d0617813346da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.0.128/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a90d0617813346da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "460756703371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AZ-B-private-2"
            },
            "tags_all": {
              "Name": "AZ-B-private-2"
            },
            "vpc_id": "vpc-012d9a50b5f283f79"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az-b-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:subnet/subnet-07c6bdfacdf7fccc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.0.160/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c6bdfacdf7fccc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "460756703371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AZ-B-public-1"
            },
            "tags_all": {
              "Name": "AZ-B-public-1"
            },
            "vpc_id": "vpc-012d9a50b5f283f79"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:vpc/vpc-012d9a50b5f283f79",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-02d7df0e5c84ccfae",
            "default_route_table_id": "rtb-0d8e7b3ba6d5d2c70",
            "default_security_group_id": "sg-090b52a6265c43038",
            "dhcp_options_id": "dopt-0651f1053ecbd5f78",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-012d9a50b5f283f79",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d8e7b3ba6d5d2c70",
            "owner_id": "460756703371",
            "tags": {
              "Name": "Custom-VPC"
            },
            "tags_all": {
              "Name": "Custom-VPC"
            }
          }
        }
      ]
    }
  ]
}